syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shoppingcart;

// gRPC definition for ShoppingCartService



service ShoppingCartService {

  rpc Sha256 (Sha256Request) returns (Sha256Response) {}

  rpc AddItem (AddItemRequest) returns (Cart) {}
  rpc UpdateItem (UpdateItemRequest) returns (Cart) {}

  rpc Checkout (CheckoutRequest) returns (Cart) {}
  rpc GetCart (GetCartRequest) returns (Cart) {}


    rpc CalculateFactorial (CalculateFactorialRequest) returns (FactorialResponse) {}


    rpc GetItemPopularity(GetItemPopularityRequest) returns (GetItemPopularityResponse) {}

    rpc CalculateDavidRequest(DavidRequest) returns (DavidResponse) {}

    rpc StreamedRequests(StreamedRequest) returns (stream StreamedResponse) {}
}

message StreamedRequest {
    int32 number = 1;
}

message StreamedResponse {
    string response = 1;
}

message DavidRequest {
    int32 seconds = 1;
    int32 factor = 2;
}
message Sha256Request {
    string message = 1;
    int32 iterations = 2;
}

message DavidResponse {
    bool hatgeklappt = 1;
}
message Sha256Response {
    string hash = 1;
}

message AddItemRequest {
  string cartId = 1;
  string itemId = 2;
  int32 quantity = 3;
}



message CalculateFactorialRequest {
    int64 number = 1;
}

message UpdateItemRequest {
  string cartId = 1;
  string itemId = 2;
  int32 quantity = 3;
}


message CheckoutRequest {
  string cartId = 1;
}

message GetCartRequest {
  string cartId = 1;
}

message Cart {
  repeated Item items = 1;
  bool checkedOut = 2;
}

message FactorialResponse {
    int64 factorial = 1;
}


message Item {
  string itemId = 1;
  int32 quantity = 2;
}


message GetItemPopularityRequest {
  string itemId = 1;
}

message GetItemPopularityResponse {
  string itemId = 1;
  int64 popularityCount = 2;
}

